{
    "name": "CardControlsInput",
    "maps": [
        {
            "name": "Card Controls",
            "id": "954c1b12-97ba-4537-91bf-07251e5b0b90",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "5075274a-5350-43cd-bc02-5dc5a3e7eb30",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "b225c7ef-5638-4370-a391-4cdf5113547b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c52ed0b8-fd57-4bd8-8f74-c11e840d9789",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Mouse And Keyboard",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c13fc3e1-caab-4ddf-98fc-f30c293958c9",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Mouse And Keyboard",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse And Keyboard",
            "bindingGroup": "Mouse And Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}